objects/ssot__ConversationEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClientDateTime__c</fullName>
        <label>Client DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationEntrySequenceNumber__c</fullName>
        <label>Conversation Entry Sequence</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationEntryStatus__c</fullName>
        <label>Conversation Entry Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationEntryType__c</fullName>
        <label>Conversation Entry Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationEntryVisibilityType__c</fullName>
        <label>Conversation Entry Visibility Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationId__c</fullName>
        <label>Conversation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceApplicationName__c</fullName>
        <label>Data Source Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationSecondsCount__c</fullName>
        <label>Duration Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementParticipantId__c</fullName>
        <label>Engagement Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Conversation Entry Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PayloadText__c</fullName>
        <label>Payload</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceId__c</fullName>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceObject__c</fullName>
        <label>Sourcet Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TranscriptedDateTime__c</fullName>
        <label>Transcripted DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isExternallyVisible__c</fullName>
        <label>is Externally Visible</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009488641_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntry_ConversationId_map_rel</label>
        <referenceTo>ssot__Conversation__dlm</referenceTo>
        <relationshipLabel>ConversationEntry_ConversationId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009488641_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009513452_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntry_EngagementParticip_rel</label>
        <referenceTo>ssot__EngagementChannelParticipant__dlm</referenceTo>
        <relationshipLabel>ConversationEntry_EngagementParticip_rel</relationshipLabel>
        <relationshipName>rel_1702009513452_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724390973558_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntry_SourceId_map_Voice_rel</label>
        <referenceTo>ssot__VoiceCall__dlm</referenceTo>
        <relationshipLabel>ConversationEntry_SourceId_map_Voice_rel</relationshipLabel>
        <relationshipName>rel_1724390973558_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>